Fix popup spacings

--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -1,7 +1,7 @@
 .form__submit-button {
   display: block;
   width: 100%;
-  margin-top: 24px;
+  margin-top: 48px;
   background-color: #000;
   color: #fff;
   font-size: 14px;
