--- a/blocks/form/__text-input/form__text-input.css
+++ b/blocks/form/__text-input/form__text-input.css
@@ -4,8 +4,13 @@
   line-height: 1.2;
   padding: 10px 0;
   width: 100%;
+  background-color: transparent;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.form__text-input:focus-visible {
+  outline: none;
 }
 
 @media screen and (min-width: 1280px) {
